--- a/api/package.json
+++ b/api/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.1"
